--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    {
+      "usersdb": "Server=(localdb)\\mssqllocaldb;Database=userstestdb;Trusted_Connection=True;"
+    }
+  },
+
   "AllowedHosts": "*"
 }
