connection string with manual in appsettingjson

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,9 @@
     }
   },
 
-  "ConnectionStrings": {
-    {
-      "usersdb": "Server=(localdb)\\mssqllocaldb;Database=userstestdb;Trusted_Connection=True;"
-    }
-  },
+  "AllowedHosts": "*",
 
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=userstestdb;Trusted_Connection=True"
+  }
 }
